# barricades

./: .gitignore  README.md  package-lock.json  pyproject.toml
.playwright-mcp/: page-2026-06-08T00-58-21-632Z.yml  page-2026-06-08T00-58-49-484Z.yml
agents/: arena.py  base.py  eval_variants.py  greedy_agent.py  heuristics.py  mcts_agent.py  minimax_agent.py  movegen.py  native_agent.py  random_agent.py  registry.py  strength.py
core/: __init__.py  bitboard.py  coords.py  rules.py  state.py
docs/: az-cloud-training-handoff.md  az-reward-ablation-results.md
native/: Cargo.toml  pyproject.toml
native/src/: bitboard.rs  coords.rs  encoding.rs  endgame.rs  lib.rs  mcts.rs  movegen.rs  pyiface.rs  selfplay.rs  state.rs
scripts/: bench_core.py  bench_minimax.py  bench_mps.py  bench_selfplay.py  bootstrap_az.py  campaign.py  distill_eval.py  distill_gen.py  distill_train.py  eval_az.py  eval_ladder.py  eval_rr.py  gen_solver_fixture.py  run_arm.py  runpod_solver_ladder.sh  runpod_solver_setup.sh  selfplay_native.py  selfplay_parallel.py  selfplay_pool.py  selfplay_run.py  strength_report.py  tournament.py  train_az.py
server/: app.py  games.py  schemas.py  serialize.py
smallboard/: encoding.py  engine.py  mcts.py  model.py  selfplay.py  solver.py  train.py  validate.py
solver/: Cargo.toml  measure_rss.sh
tests/: test_analyze.py  test_apply.py  test_arena.py  test_az_agent.py  test_az_encoding.py  test_az_mcts.py  test_az_model.py  test_az_train.py  test_bitboard.py  test_blocking.py  test_bootstrap.py  test_campaign_smoke.py  test_coords.py  test_games.py  (+37 more)
(+89 files in other folders)
