[package]
name = "barricades_native"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "barricades_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
numpy = "0.28"
rayon = "1"
rand = "0.10"
rand_distr = "0.6"

[profile.release]
overflow-checks = true
